--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ server {
 
  location /api {
    rewrite /api/(.*) /$1 break;
-   proxy_pass http://mask-backend:8080;
+   proxy_pass http://mask-backend2:8080;
 
  }
 }
